--- a/proyecto_final/reporte/informe_ref.bib
+++ b/proyecto_final/reporte/informe_ref.bib
@@ -214,7 +214,7 @@ San Nicolás de los Garza}
 
 @ARTICLE{Ortigoza,
   title = {Trajectory Tracking Control for a Differential Drive Wheeled Robot Considering the Dynamics Related to the Actuators and Power Stage},
-  author ={S. Ortigoza, et al},
+  author ={S. Ortigoza},
   year={2016},
   journal={IEEE Latin American Transactions},
   volume={14},
@@ -229,6 +229,42 @@ San Nicolás de los Garza}
   address={Valencia, Espa\~na},
   school={Universdad polit\'ecnica de Valencia}
 }
+
+@ARTICLE{sarkar,
+  title = {Control of Mechanical Systems With Rolling Constraints: Application to Dynamic Control of Mobile Robots},
+  author ={Nilanjan Sarkar},
+  year={1994},
+  journal={International Journal of Robotics Research},
+  volume={13},
+  pages={55-,69}
+  
+}
+
+
+@ARTICLE{zohar,
+  title = {Mobile robot characterized by dynamic and kynematic equations and actuator dynamics: Trajectory tracking and related application},
+  author ={Ilan Zohar},
+  year={2011},
+  journal={Robotics and Autonomous Systems},
+  volume={59},
+  pages={343-,353}
+  
+}
+
+@misc{stutts,
+   author = "Daniel Stutts",
+   title = "{Equivalente Viscous Damping}",
+   year = "2009",
+   howpublished = "\url{http://web.mst.edu/~stutts/SupplementalNotes/EqivalentViscousDamping.pdf}",
+   note = "Consultado 25 de junio del 2016"
+}
+
+
+
+
+
+
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
